fix #1498 add thumbnail generator as a process